--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 　　
 <ul>
 
-    　　　　{% for content in site.contents %}
+    　　　　{% for content in site.contents.other %}
 
     　　　　　　
     <li>{{ post.date | date_to_string }} <a href="{{ site.baseurl }}{{ content.url }}">{{ content.title }}</a></li>
