--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <li class="divider"></li>
                 <li>
                     <a href="https://github.com/tt20050510" target="blank" class="gitbook-link">
-                        Howard GitHub
+                        Howard · GitHub
                     </a>
                 </li>
             </ul>
@@ -87,7 +87,7 @@
         var gitbook = gitbook || [];
         gitbook.push(function () {
             gitbook.page.hasChanged({
-                "page": {"title": "Introduction", "level": "1.1", "depth": 1, "dir": "ltr"},
+                "page": {"title": "Howard · GitBook", "level": "1.1", "depth": 1, "dir": "ltr"},
                 "config": {
                     "gitbook": "*",
                     "theme": "default",
